added all the commutators

--- a/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
+++ b/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
@@ -149,7 +149,7 @@ with spacing ($\to$ bands). For $l_x=l_y=l_z=$ 1 cm one has:
 and each solution occupies $\frac{\pi^3}{l_x l_y l_z}=\frac{\pi^3}{V}$
 
 \subsubsection{Fermi Energy}
-For a solid with $N$ atoms with $q$ valence electrons each the total volume
+For a solid with $N$ atoms with $q$ valence electrons each the total volume (3D)
 \noindent\begin{equation*}
     \frac{1}{8}\cdot\underbrace{\frac{4}{3}\pi k_F^3}_{\textsf{vol. sphere}} = \underbrace{\frac{Nq}{2}}_{\frac{\textsf{\# electrons}}{\mathsf{spin}}}\cdot \underbrace{\frac{\pi^3}{V}}_{\textsf{vol. per state}}
 \end{equation*}
