--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -67,11 +67,13 @@ Evaluate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$ and not $(\widehat{
 \ptitle{Angular Momentum Commutators}\label{ang_mom_comm}
 
 Same rules apply to spin $\mathbf{S}$
-\noindent\begin{gather*}
-    \left[\widehat{L}_{x},\widehat{L}_{y}\right] =i\hbar \widehat{L}_{z}, \qquad \left[\widehat{L}_{y},\widehat{L}_{z}\right]  =i\hbar \widehat{L}_{x}, \qquad \left[\widehat{L}_{z},\widehat{L}_{x}\right]  =i\hbar \widehat{L}_{y}      \\
-    \left[\widehat{L}^{2},\widehat{L}_{x}\right] = \left[\widehat{L}^{2},\widehat{L}_{y}\right] = \left[\widehat{L}^{2},\widehat{L}_{z}\right] = 0\\
-    \left[\widehat{L}^2, \mathbf{L}\right]=0
-\end{gather*}
+\noindent\begin{flalign*}
+     & \left[\widehat{L}_{x},\widehat{L}_{y}\right] =i\hbar \widehat{L}_{z} &  & \left[\widehat{L}_{y},\widehat{L}_{z}\right]  =i\hbar \widehat{L}_{x} &  & \left[\widehat{L}_{z},\widehat{L}_{x}\right]  =i\hbar \widehat{L}_{y} & \\
+     & \left[\widehat{L}_{x, y, z}, \widehat{L}^{2}\right]= 0               &  & \left[\widehat{L}_{x,y,z},\widehat{r}^2\right] =0                     &  & \left[\widehat{L}_{x,y,z},\widehat{p}^2\right] =0                     & \\
+     & \left[\widehat{L}^2, \mathbf{L}\right]=0                             &  & \left[\widehat{L}^2, \widehat{L}_\pm\right]=0                         &  & \left[\widehat{L}_z, \widehat{L}_\pm\right]=\pm\hbar\widehat{L}_\pm   & \\
+     & \left[\widehat{L}_{z},x\right]  =i\hbar y,                           &  & \left[\widehat{L}_{z},y\right]  =-i\hbar z,                           &  & \left[\widehat{L}_{z},z\right]  =0                                    & \\
+     & \left[\widehat{L}_{z},\widehat{p}_x\right]  =i\hbar \widehat{p}_y,   &  & \left[\widehat{L}_{z},\widehat{p}_y\right]  =-i\hbar \widehat{p}_z,   &  & \left[\widehat{L}_{z},\widehat{p}_z\right]  =0                        &
+\end{flalign*}
 
 \subsection{Dirac Notation}
 Assuming the functions $f,g$ are square integrable i.e.\ in $L_2$ (\textbf{Hilbert space}) $\mathcal{H}$.
