--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -67,15 +67,16 @@ Explicit solution depends of the potential $V$.
 %     r      & = \text{radius}
 % \end{align*}
 {\footnotesize
-    \begin{align*}
+    \begin{equation*}
         % \mathbf{\nabla} & =\mathbf{u}_{r}\frac{\partial}{\partial r}+\frac{\mathbf{u}_{\theta}}{r}\frac{\partial}{\partial\theta}+\frac{\mathbf{u}_{\phi}}{r\sin\theta}\frac{\partial}{\partial\phi}                                      \\
         \nabla^2  =\frac{1}{r^2}\frac{\partial}{\partial r}\left(r^2\frac{\partial}{\partial r}\right) + \frac{1}{r^2\sin(\theta)}\frac{\partial}{\partial\theta}\left(\sin(\theta)\frac{\partial}{\partial \theta}\right)
         + \frac{1}{r^2\sin^2(\theta)}\left(\frac{\partial^2}{\partial \phi^2}\right)
-    \end{align*}}
-\begin{equation*}
-    d^2\mathbf{r} = \sin(\theta)d\theta\:d\phi; \qquad
-    d^3\mathbf{r} = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi
-\end{equation*}
+    \end{equation*}}
+\begin{gather*}
+    d^2\mathbf{r} = \sin(\theta)d\theta\:d\phi, \qquad d^3\mathbf{r} = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi\\
+    x = r\sin\theta\cos\phi,\quad y = r\sin\theta\sin\phi,\quad z=r\cos\theta\\
+    r^2=x^2+y^2+z^2, \quad \theta=\arccos\left(\frac{z}{r}\right) , \quad \phi=\arctan\left(\frac{y}{x}\right)
+\end{gather*}
 
 \newpar{}
 \ptitle{Probability Calculations}
