fixed some typos. Byebye QM <3

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -726,7 +726,7 @@ which increase or lower the eigenvalue of $\widehat{L}_z$ by $\hbar$. These oper
 As they are compatible (share eigenfunctions), we choose to find the eigenfunctions for $\widehat{L}^2$ and $\widehat{L}_z$
 \begin{align*}
     \widehat{L}^2 f_{\ell}^{m_l} & =\hbar^{2}\ell (\ell+1) f_{\ell}^{m_l} \\
-    \widehat{L}_z f_{\ell}^{m_l} & =\hbar mf_{\ell}^{m_l}
+    \widehat{L}_z f_{\ell}^{m_l} & =\hbar m_l f_{\ell}^{m_l}
 \end{align*}
 with quantum numbers
 \begin{align*}
