--- a/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
+++ b/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
@@ -161,7 +161,7 @@ is occupied in k-space until all electron states are occupied.
         {\left(\frac{3\pi^2 N q}{V}\right)}^{\frac{1}{3}} & \mathrm{3D}
     \end{cases}, \quad
     E_F  = \begin{cases}
-        \frac{1}{8}\left(\hbar \pi \frac{Nq}{L}\right)^2                    & \mathrm{1D} \\
+        \frac{1}{8}{\left(\hbar \pi \frac{Nq}{L}\right)}^2                    & \mathrm{1D} \\
         \frac{\hbar^2 \pi}{m} \frac{Nq}{A}                                  & \mathrm{2D} \\
         \frac{\hbar^2}{2m}{\left(\frac{3\pi^2 N q}{V}\right)}^{\frac{2}{3}} & \mathrm{3D}
     \end{cases}
